<!--
  This resource file maintains application strings. It is recommended that all strings
  intended to be displayed to the user be kept in this file. It is a best practice, as it
  allows strings to be maintained properly and allows the developer to specify translated files
  based on language settings.

  You may need to add strings to this file during your development.
  -->

<resources>
    <string name="app_name">My Activities</string>

    <string name="accelerometer_reading_format_string" formatted="false">X: %f Y: %f Z: %f </string>
    <string name="accelerometer_reading_initial">X: — Y: — Z: — </string>
    <string name="accelerometer_started">Accelerometer Started.</string>
    <string name="accelerometer_stopped">Accelerometer Stopped.</string>
    <string name="audio_started">Microphone Started.</string>
    <string name="audio_stopped">Microphone Stopped.</string>
    <string name="location_started">Location Started.</string>
    <string name="location_stopped">Location Stopped.</string>
    <string name="ppg_started">PPG Started.</string>
    <string name="ppg_stopped">PPG Stopped.</string>
    <string name="band_started">MS Band Service Started.</string>
    <string name="band_stopped">MS Band Service Stopped.</string>

    <string name="action_settings">Settings</string>

    <string name="android_step_count_initial">Spin Times: 0</string>
    <string name="local_step_count_initial">Local: 0</string>
    <string name="server_step_count_initial">Server: 0</string>

    <string name="android_step_count" formatted="false">Spin Times: %d</string>
    <string name="local_step_count" formatted="false">Spin times: %d</string>
    <string name="server_step_count" formatted="false">Server: %d</string>

    <string name="speaker" formatted="false">Speaker: %s</string>
    <string name="speaker_initial">Speaker: None</string>

    <string name="heart_rate_initial">0</string>
    <string name="activity_initial">Start Spinning!</string>

    <string name="app_package_identifier_prefix">package:</string>
    <string name="about_app_version">Version %s</string>

    <string name="text_switch_accelerometer">Spin Phone</string>
    <string name="text_switch_jump_accelerometer">Jump High</string>

    <string name="text_switch_microphone">Microphone</string>
    <string name="text_switch_heart_rate">Photoplethysmography</string>
    <string name="text_switch_gps">Location</string>

    <string name="highest_jump" formatted="false">Highest Jump: %d cm</string>
    <string name="last_jump" formatted="false">Last Jump: %d cm</string>

    <string name="highest_jump_initial">Highest Jump: 0 cm</string>
    <string name="last_jump_initial">Last Jump: 0 cm</string>

    <string name="last_throw" formatted="false">Last Throw: %d m</string>
    <string name="best_throw" formatted="false">Best Throw: %d m</string>

    <string name="best_throw_initial">Best Throw: 0 m</string>
    <string name="last_throw_initial">Last Throw: 0 m</string>

    <string name="last_vthrow" formatted="false">Last Throw: %d cm</string>
    <string name="best_vthrow" formatted="false">Best Throw: %d cm</string>

    <string name="best_vthrow_initial">Best Throw: 0 m</string>
    <string name="last_vthrow_initial">Last Throw: 0 m</string>
    <string name="throw_far">SHOT PUT!</string>
    <string name="throw_high">Throw up your phone!</string>
    <string name="app_details">CS390MB : Mobile Health Sensing</string>
</resources>