<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background_steps">

    <Switch
        android:id="@+id/throwSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/throw_far"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutAccelerometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAccelerometerReading"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_step_count">

            <LinearLayout
                android:id="@+id/layout_jump_texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtLastThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/throwSwitch"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="36dp"
        android:text="@string/last_throw_initial" />

    <TextView
        android:id="@+id/txtBestThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLastThrow"
        android:layout_alignBottom="@+id/txtLastThrow"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/best_throw_initial" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtBestThrow"
        android:layout_alignRight="@+id/txtBestThrow"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/throw_t" />


</RelativeLayout>