<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background_steps">

    <Switch
        android:id="@+id/switchAccelerometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="Jump High!"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAccelerometerReading"
        android:layout_below="@id/switchAccelerometer"
        android:text="@string/accelerometer_reading_initial"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/layoutAccelerometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAccelerometerReading"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_step_count">

            <LinearLayout
                android:id="@+id/layout_jump_texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtLastJump"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/last_jump_initial"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtHighestJump"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/highest_jump_initial"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>