<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background_steps">

    <Switch
        android:id="@+id/throwSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/throw_high"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutAccelerometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAccelerometerReading"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_step_count">

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtLastVThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/throwSwitch"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="27dp"
        android:text="@string/last_vthrow_initial" />

    <LinearLayout
        android:id="@+id/layout_throw_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutAccelerometer"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtLastVThrow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/crazy" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtBestVThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:layout_toEndOf="@+id/txtLastVThrow"
        android:layout_toRightOf="@+id/txtLastVThrow"
        android:text="@string/best_vthrow_initial" />


</RelativeLayout>